--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,3 +19,51 @@ body {
     background-color: var(--dark-gray);
     color: var(--light-gray);
 }
+
+header {
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+.search-section {
+    border-right: 2px solid var(--divider-gray);
+    padding-top: 10px;
+}
+
+.current-class {
+    border: 2px solid var(--divider-gray);
+    border-radius: 15px;
+    margin-left: 10px;
+}
+
+.uv-low {
+    background-color: green;
+    padding: 3px;
+    border-radius: 5px;
+}
+
+.uv-moderate {
+    background-color: yellow;
+    color: var(--dark-gray);
+    padding: 3px;
+    border-radius: 5px;
+}
+
+.uv-high {
+    background-color: red;
+    padding: 3px;
+    border-radius: 5px;
+}
+
+#forecast-heading {
+    margin-top: 25px;
+    margin-left: 10px; 
+}
+
+.forecast-card {
+    border: 2px solid var(--divider-gray);
+    border-radius: 15px;
+    margin: 10px;
+}
+
+/*! to make responsive to mobile, delete .row from <main>, .col- from .search-section and .search-results */
