--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,11 +18,20 @@
 body {
     background-color: var(--dark-gray);
     color: var(--light-gray);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 header {
     text-align: center;
     margin-bottom: 25px;
+    background-color: var(--dark-gray);
+    margin: 10px 0 50px 0;
+}
+
+h1 {
+    color: var(--light-gray);
+    letter-spacing: 3px;
+    font-weight: 600;
 }
 
 .search-section {
@@ -30,10 +39,35 @@ header {
     padding-top: 10px;
 }
 
-.current-class {
+.btn {
+    background-color: var(--light-purple);
+    margin: 5px 0 15px 0;
+}
+
+.recent-search {
+    margin: 5px 0 5px 0;
+    text-align: center;
+    background-color: var(--dark-gray);
+    color: var(--light-gray);
     border: 2px solid var(--divider-gray);
+    border-radius: 5px;
+    width: 100%;
+}
+
+.recent-search:hover {
+    background-color: var(--light-purple);
+
+}
+
+.recent-search:active {
+    border: none;
+}
+
+.current-class {
     border-radius: 15px;
     margin-left: 10px;
+    background-color: var(--light-purple);
+    padding-bottom: 10px;
 }
 
 .uv-low {
@@ -61,9 +95,30 @@ header {
 }
 
 .forecast-card {
-    border: 2px solid var(--divider-gray);
     border-radius: 15px;
     margin: 10px;
+    background-color: var(--light-purple);
+    padding: 10px;
 }
 
-/*! to make responsive to mobile, delete .row from <main>, .col- from .search-section and .search-results */
+.icon-center { 
+    text-align: center;
+}
+
+@media screen and (max-width: 991px) {
+    aside {
+        width: 100%;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
+    .search-section {
+        width: 80%;
+        margin-right: auto;
+        margin-left: auto;
+        margin-bottom: 15px;
+        border: none;
+        padding-bottom: 15px;
+        border-bottom: 2px solid var(--divider-gray);
+    }
+}
